bug fix, changed libs

--- a/recent_configurations.json
+++ b/recent_configurations.json
@@ -1,6 +1,21 @@
 {
   "devices": [
     {
+      "id": "b531b151-3a5c-4158-ab81-43f82e8e78fa",
+      "name": "Example",
+      "type": "websocket",
+      "ip": "10.192.65.179",
+      "battery": 0,
+      "rssi": 0,
+      "slider": 0,
+      "btn_count": 0,
+      "btn_labels": [],
+      "sw_count": 1,
+      "sw_labels": [
+        "SW1"
+      ]
+    },
+    {
       "id": "926eac8a-0241-4f80-a04b-8b58eea3d490",
       "name": "",
       "type": "http",
@@ -53,23 +68,10 @@
       "sw_count": 0,
       "sw_labels": [],
       "id": "fa44686f-cc7d-40aa-bed9-d8be1c76ab95"
-    },
-    {
-      "name": "",
-      "type": "http",
-      "ip": "",
-      "battery": 0,
-      "rssi": 0,
-      "slider": 0,
-      "btn_count": 0,
-      "btn_labels": [],
-      "sw_count": 0,
-      "sw_labels": [],
-      "id": "bfd32859-707b-4eec-b5e7-c9eba218b5f9"
     }
   ],
   "preferences": {
     "dark_mode": 0,
-    "joypad_mod": 1
+    "joypad_mod": 2
   }
 }
